@@ -8,6 +8,7 @@ Enhancements
  -
 
 Bug fixes
+ - [core] handle broken CalDAV clients sending bogus SENT-BY (#3992)
  - [web] fixed ACL editor in admin module for Safari (#4036)
  - [web] fixed function call when removing contact category (#4039)
  - [web] localized mailbox names everywhere (#4040, #4041)
